--- a/src/main/webapp/WEB-INF/pages/admin/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/admin/shared/head.html
@@ -4,22 +4,26 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Document</title>
 <!-- jQuery -->
-<script src="../../../../static/lib/jquery/jquery-3.6.0.min.js" routeType="text/javascript"></script>
+<script src="/static/lib/jquery/jquery-3.5.1.min.js" routeType="text/javascript"></script>
 
 <!-- Bootstrap 5 -->
-<link href="../../../../static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<script src="../../../../static/lib/bootstrap/js/bootstrap.bundle.min.js" routeType="text/javascript"></script>
+<link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<script src="/static/lib/bootstrap/js/bootstrap.bundle.min.js" routeType="text/javascript"></script>
 
 <!-- Font Awesome -->
-<link href="../../../../static/lib/fontawesome/css/all.min.css" rel="stylesheet">
+<link href="/static/lib/fontawesome/css/all.min.css" rel="stylesheet">
 
 <!-- DataTables -->
-<script src="../../../../static/lib/datatables/js/jquery.dataTables.min.js"></script>
-<link href="../../../../static/lib/datatables/css/dataTables.bootstrap5.min.css" rel="stylesheet">
-<script src="../../../../static/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
+<script src="/static/lib/datatables/js/jquery.dataTables.min.js"></script>
+<link href="/static/lib/datatables/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+<script src="/static/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
+
+<!-- ImageTools -->
+<script src="/static/lib/imageTools/imageTools.js"></script>
 
 <!-- Custom CSS -->
-<link href="../../../../static/css/style.css" rel="stylesheet">
+<link href="/static/css/style.css" rel="stylesheet">
+<link href="/static/css/profile_image.css" rel="stylesheet">
 
 <!-- Custom JS -->
-<script src="../../../../static/js/script.js" routeType="text/javascript"></script>
+<script src="/static/js/admin/sidebar.js"></script>
