--- a/src/main/webapp/WEB-INF/pages/common/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/common/shared/head.html
@@ -11,10 +11,10 @@
 <link href="/static/lib/fontawesome/css/all.min.css" rel="stylesheet">
 
 <!-- jQuery -->
-<script src="/static/lib/jquery/jquery-3.6.0.min.js"></script>
+<script src="/static/lib/jquery/jquery-3.5.1.min.js"></script>
 
 <!-- Custom CSS -->
 <link href="/static/css/style.css" rel="stylesheet">
 
 <!-- Custom JS -->
-<script src="/static/js/script.js"></script>
+<script src="/static/js/util/locale.js"></script>
