--- a/src/main/webapp/WEB-INF/pages/admin/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/admin/shared/head.html
@@ -22,7 +22,7 @@
 <script src="/static/lib/imageTools/imageTools.js"></script>
 
 <!-- Custom CSS -->
-<link href="/static/css/style.css" rel="stylesheet">
+<link href="/static/css/admin/admin.css" rel="stylesheet">
 <link href="/static/css/profile_image.css" rel="stylesheet">
 
 <!-- Custom JS -->
