--- a/src/main/webapp/WEB-INF/pages/common/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/common/shared/head.html
@@ -14,7 +14,7 @@
 <script src="/static/lib/jquery/jquery-3.5.1.min.js"></script>
 
 <!-- Custom CSS -->
-<link href="/static/css/style.css" rel="stylesheet">
+<link href="/static/css/common/header.css" rel="stylesheet">
 
 <!-- Custom JS -->
 <script src="/static/js/util/locale.js"></script>
