settings page & change password feature

--- a/src/main/webapp/WEB-INF/pages/admin/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/admin/shared/head.html
@@ -18,12 +18,12 @@
 <link href="/static/lib/datatables/css/dataTables.bootstrap5.min.css" rel="stylesheet">
 <script src="/static/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
 
-<!-- ImageTools -->
-<script src="/static/lib/imageTools/imageTools.js"></script>
+<!-- jQuery Confirm -->
+<link href="/static/lib/jquery-confirm/css/jquery-confirm.min.css" rel="stylesheet">
+<script src="/static/lib/jquery-confirm/js/jquery-confirm.min.js"></script>
 
 <!-- Custom CSS -->
 <link href="/static/css/admin/admin.css" rel="stylesheet">
-<link href="/static/css/profile_image.css" rel="stylesheet">
 
 <!-- Custom JS -->
 <script src="/static/js/admin/sidebar.js"></script>
