--- a/src/main/webapp/WEB-INF/pages/common/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/common/shared/head.html
@@ -13,6 +13,10 @@
 <!-- jQuery -->
 <script src="/static/lib/jquery/jquery-3.5.1.min.js"></script>
 
+<!-- jQuery Confirm -->
+<link href="/static/lib/jquery-confirm/css/jquery-confirm.min.css" rel="stylesheet">
+<script src="/static/lib/jquery-confirm/js/jquery-confirm.min.js"></script>
+
 <!-- Custom CSS -->
 <link href="/static/css/common/header.css" rel="stylesheet">
 
