--- a/src/main/webapp/WEB-INF/pages/admin/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/admin/shared/head.html
@@ -22,8 +22,14 @@
 <link href="/static/lib/jquery-confirm/css/jquery-confirm.min.css" rel="stylesheet">
 <script src="/static/lib/jquery-confirm/js/jquery-confirm.min.js"></script>
 
+<!-- jQuery Select2 -->
+<link href="/static/lib/jquery-select2/css/select2.min.css" rel="stylesheet">
+<link href="/static/lib/jquery-select2-bootstrap/css/select2-bootstrap.min.css" rel="stylesheet">
+<script src="/static/lib/jquery-select2/js/select2.min.js"></script>
+
 <!-- Custom CSS -->
 <link href="/static/css/admin/admin.css" rel="stylesheet">
 
 <!-- Custom JS -->
+<script src="/static/js/util/delay.js"></script>
 <script src="/static/js/admin/sidebar.js"></script>
