--- a/src/main/webapp/WEB-INF/pages/admin/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/admin/shared/head.html
@@ -33,3 +33,4 @@
 <!-- Custom JS -->
 <script src="/static/js/util/delay.js"></script>
 <script src="/static/js/admin/sidebar.js"></script>
+<script src="/static/js/util/model.js"></script>
