--- a/src/main/webapp/WEB-INF/pages/common/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/common/shared/head.html
@@ -17,8 +17,18 @@
 <link href="/static/lib/jquery-confirm/css/jquery-confirm.min.css" rel="stylesheet">
 <script src="/static/lib/jquery-confirm/js/jquery-confirm.min.js"></script>
 
+<!-- DataTables -->
+<script src="/static/lib/datatables/js/jquery.dataTables.min.js"></script>
+<link href="/static/lib/datatables/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+<script src="/static/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
+
+<!-- DataTables Scroller -->
+<link href="/static/lib/datatables/css/scroller.dataTables.min.css">
+<script src="/static/lib/datatables/js/dataTables.scroller.min.js"></script>
+
 <!-- Custom CSS -->
 <link href="/static/css/common/header.css" rel="stylesheet">
 
 <!-- Custom JS -->
 <script src="/static/js/util/locale.js"></script>
+<script src="/static/js/util/model.js"></script>
