--- a/src/main/webapp/WEB-INF/pages/admin/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/admin/shared/head.html
@@ -27,10 +27,15 @@
 <link href="/static/lib/jquery-select2-bootstrap/css/select2-bootstrap.min.css" rel="stylesheet">
 <script src="/static/lib/jquery-select2/js/select2.min.js"></script>
 
+<!-- DataTables Scroller -->
+<link href="/static/lib/datatables/css/scroller.dataTables.min.css">
+<script src="/static/lib/datatables/js/dataTables.scroller.min.js"></script>
+
 <!-- Custom CSS -->
 <link href="/static/css/admin/admin.css" rel="stylesheet">
 
 <!-- Custom JS -->
+<script src="/static/js/util/locale.js"></script>
 <script src="/static/js/util/delay.js"></script>
 <script src="/static/js/admin/sidebar.js"></script>
 <script src="/static/js/util/model.js"></script>
