--- a/src/main/webapp/WEB-INF/pages/common/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/common/shared/head.html
@@ -26,9 +26,15 @@
 <link href="/static/lib/datatables/css/scroller.dataTables.min.css">
 <script src="/static/lib/datatables/js/dataTables.scroller.min.js"></script>
 
+<!-- jQuery Select2 -->
+<link href="/static/lib/jquery-select2/css/select2.min.css" rel="stylesheet">
+<link href="/static/lib/jquery-select2-bootstrap/css/select2-bootstrap.min.css" rel="stylesheet">
+<script src="/static/lib/jquery-select2/js/select2.min.js"></script>
+
 <!-- Custom CSS -->
 <link href="/static/css/common/header.css" rel="stylesheet">
 
 <!-- Custom JS -->
 <script src="/static/js/util/locale.js"></script>
 <script src="/static/js/util/model.js"></script>
+<script src="/static/js/util/grade_styler.js"></script>
