--- a/src/main/webapp/WEB-INF/pages/admin/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/admin/shared/head.html
@@ -34,4 +34,5 @@
 <script src="/static/js/util/locale.js"></script>
 <script src="/static/js/util/delay.js"></script>
 <script src="/static/js/admin/sidebar.js"></script>
-<script src="/static/js/util/model.js"></script>
+<script src="/static/js/util/async_task_queue.js"></script>
+<script src="/static/js/util/fetch.js"></script>
