--- a/src/main/webapp/WEB-INF/pages/common/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/common/shared/head.html
@@ -36,5 +36,6 @@
 
 <!-- Custom JS -->
 <script src="/static/js/util/locale.js"></script>
-<script src="/static/js/util/model.js"></script>
+<script src="/static/js/util/async_task_queue.js"></script>
+<script src="/static/js/util/fetch.js"></script>
 <script src="/static/js/util/grade_styler.js"></script>
