--- a/src/main/webapp/WEB-INF/pages/common/shared/head.html
+++ b/src/main/webapp/WEB-INF/pages/common/shared/head.html
@@ -1,41 +1,20 @@
-<title>BSUIRHub</title>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 <!-- Bootstrap 5 -->
 <link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="/static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<!-- Font Awesome -->
-<link href="/static/lib/fontawesome/css/all.min.css" rel="stylesheet">
-
 <!-- jQuery -->
 <script src="/static/lib/jquery/jquery-3.5.1.min.js"></script>
-
 <!-- jQuery Confirm -->
 <link href="/static/lib/jquery-confirm/css/jquery-confirm.min.css" rel="stylesheet">
 <script src="/static/lib/jquery-confirm/js/jquery-confirm.min.js"></script>
-
-<!-- DataTables -->
-<script src="/static/lib/datatables/js/jquery.dataTables.min.js"></script>
-<link href="/static/lib/datatables/css/dataTables.bootstrap5.min.css" rel="stylesheet">
-<script src="/static/lib/datatables/js/dataTables.bootstrap5.min.js"></script>
-
-<!-- DataTables Scroller -->
-<link href="/static/lib/datatables/css/scroller.dataTables.min.css">
-<script src="/static/lib/datatables/js/dataTables.scroller.min.js"></script>
-
-<!-- jQuery Select2 -->
-<link href="/static/lib/jquery-select2/css/select2.min.css" rel="stylesheet">
-<link href="/static/lib/jquery-select2-bootstrap/css/select2-bootstrap.min.css" rel="stylesheet">
-<script src="/static/lib/jquery-select2/js/select2.min.js"></script>
-
-<!-- Custom CSS -->
+<!-- Locale -->
+<script src="/static/js/util/locale.js"></script>
+<!-- Header CSS -->
 <link href="/static/css/common/header.css" rel="stylesheet">
 
-<!-- Custom JS -->
-<script src="/static/js/util/locale.js"></script>
-<script src="/static/js/util/async_task_queue.js"></script>
-<script src="/static/js/util/fetch.js"></script>
-<script src="/static/js/util/grade_styler.js"></script>
+
+
